# pyalab

./: .copier-answers.yml  .coveragerc  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  _typos.toml  create_vialab_program.ipynb  mutex_queue  pylintrc.toml  pyproject.toml  pyrightconfig.json  pytest.ini  ruff-test.toml  ruff.toml
.devcontainer/: devcontainer.json  docker-compose.yml  initialize-command.sh  install-ci-tooling.py  install-ci-tooling.sh  manual-setup-deps.sh  on-create-command-boilerplate.sh  on-create-command.sh  post-start-command.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/actions/install_deps_uv/: action.yml  install-ci-tooling.ps1  manual-setup-deps.ps1
.github/workflows/: checks.yaml  ci.yaml  publish.yaml  publish_to_staging.yaml
docs/: conf.py  create_vialab_program.ipynb  example.rst  imcs_demo.ipynb  index.rst  parameter_sets.rst  program.rst  requirements.txt  steps.rst
src/pyalab/: __init__.py  constants.py  deck.py  integra_xml.py  pipette.py  plate.py  program.py
src/pyalab/steps/: __init__.py  base.py  builders.py  multi_dispense.py  params.py  set_volume.py  transfer.py
tests/unit/: conftest.py  constants.py  fixtures.py  simple_transfer_program.xml  snapshot.py  test_deck.py  test_library_component.py  test_pipette.py  test_plate.py  test_program.py
tests/unit/method_steps/: test_multi_dispense.py  test_set_volume.py  test_simple_transfer.py
tests/unit/program/: test_d_one.py  test_program.py
tests/unit/steps/: test_set_volume.py
(+403 files in other folders)
